Skip generating properties in MappedEntityVisitor (#1993)