@@ -15,7 +15,6 @@
  */
 package io.micronaut.data.processor.visitors;
 
-import io.micronaut.context.annotation.Property;
 import io.micronaut.core.annotation.AnnotationClassValue;
 import io.micronaut.core.annotation.AnnotationMetadata;
 import io.micronaut.core.annotation.AnnotationValue;
@@ -27,7 +26,6 @@ import io.micronaut.data.annotation.MappedEntity;
 import io.micronaut.data.annotation.MappedProperty;
 import io.micronaut.data.annotation.Relation;
 import io.micronaut.data.annotation.TypeDef;
-import io.micronaut.data.model.Association;
 import io.micronaut.data.model.DataType;
 import io.micronaut.data.model.PersistentProperty;
 import io.micronaut.data.model.naming.NamingStrategies;
@@ -42,13 +40,13 @@ import io.micronaut.inject.processing.ProcessingException;
 import io.micronaut.inject.visitor.TypeElementVisitor;
 import io.micronaut.inject.visitor.VisitorContext;
 
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import static io.micronaut.data.processor.visitors.Utils.getConfiguredDataConverters;
 import static io.micronaut.data.processor.visitors.Utils.getConfiguredDataTypes;
@@ -103,15 +101,7 @@ public class MappedEntityVisitor implements TypeElementVisitor<MappedEntity, Obj
     @Override
     public void visitClass(ClassElement element, VisitorContext context) {
         NamingStrategy namingStrategy = resolveNamingStrategy(element);
-        Optional<String> targetName = element.stringValue(MappedEntity.class);
         SourcePersistentEntity entity = entityResolver.apply(element);
-        if (isMappedEntity() && targetName.isEmpty()) {
-            element.annotate(MappedEntity.class, builder -> {
-
-                String mappedName = namingStrategy.mappedName(entity);
-                builder.value(mappedName);
-            });
-        }
         Map<String, DataType> dataTypes = getConfiguredDataTypes(element);
         Map<String, String> dataConverters = getConfiguredDataConverters(element);
 
@@ -119,7 +109,7 @@ public class MappedEntityVisitor implements TypeElementVisitor<MappedEntity, Obj
 
         final List<AnnotationValue<Index>> indexes = properties.stream()
                 .flatMap(prop -> prop.findAnnotation(Index.class).stream())
-                .toList();
+                .collect(Collectors.toList());
 
         if (!indexes.isEmpty()) {
            element.annotate(Indexes.class, builder -> builder.values(indexes.toArray(new AnnotationValue[]{})));
@@ -142,10 +132,6 @@ public class MappedEntityVisitor implements TypeElementVisitor<MappedEntity, Obj
         if (version != null) {
             computeMappingDefaults(namingStrategy, version, dataTypes, dataConverters, context);
         }
-    }
-
-    private boolean isMappedEntity() {
-        return mappedEntity;
     }
 
     private void computeMappingDefaults(
@@ -214,39 +200,6 @@ public class MappedEntityVisitor implements TypeElementVisitor<MappedEntity, Obj
                     throw new ProcessingException(propertyElement, "Relation " + kind + " doesn't support 'mappedBy'.");
                 }
             }
-            if (kind == Relation.Kind.EMBEDDED) {
-                // handled embedded
-                SourcePersistentEntity embeddedEntity = entityResolver.apply(propertyElement.getType());
-                List<SourcePersistentProperty> persistentProperties = embeddedEntity.getPersistentProperties();
-
-                List<AnnotationValue<Property>> embeddedProperties = new ArrayList<>(persistentProperties.size());
-
-                for (SourcePersistentProperty embeddedProperty : persistentProperties) {
-                    if (!(embeddedProperty instanceof Association)) {
-                        String mappedName = embeddedProperty.stringValue(MappedProperty.class)
-                                .orElseGet(() -> namingStrategy.mappedName(
-                                        property.getName() + embeddedProperty.getCapitilizedName()));
-                        AnnotationValue<Property> av = AnnotationValue.builder(Property.class)
-                                .value(mappedName)
-                                .member("name", embeddedProperty.getName()).build();
-                        embeddedProperties.add(av);
-                    }
-//                    else {
-//                        // TODO: handle nested embedded
-//                    }
-                }
-
-                propertyElement.annotate(MappedProperty.class, builder ->
-                    builder.member(MappedProperty.EMBEDDED_PROPERTIES, embeddedProperties.toArray(new AnnotationValue[0]))
-                );
-            }
-        }
-
-        Optional<String> mapping = annotationMetadata.stringValue(MappedProperty.class);
-        if (mappedEntity && mapping.isEmpty()) {
-            propertyElement.annotate(MappedProperty.class, builder -> builder.value(namingStrategy.mappedName(spp))
-                .member("generatedSimpleName", namingStrategy.mappedName(spp.getName()))
-                .member("generated", true));
         }
 
         if (dataType != DataType.OBJECT) {
